PIP-1192 Update Docker, Kubernetes and documentation for Elasticsearch 9